<?xml version="1.0"?>
<package format="2">
  <name>myrobot_navigation</name>
  <version>0.1.0</version>
  <description>The myrobot_navigation package</description>

  <maintainer email="your@email.here">Your name here</maintainer>
  <author email="your@email.here">Your name here</author>
  <license>Commercial</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>angles</depend>
  <depend>costmap_2d</depend>
  <depend>geometry_msgs</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>rospy</depend>
  <depend>move_base</depend>

  <export>
    <costmap_2d plugin="${prefix}/costmap_plugins.xml"/>
  </export>

</package>