<?xml version="1.0"?>
<package format="2">
  <name>myrobot_slam</name>
  <version>0.1.0</version>
  <description>The myrobot_slam package</description>
  
  <maintainer email="test@test.test">Test Test</maintainer>
  <license>TEST</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>myrobot_description</exec_depend>
</package>
